--- a/Learn by Doing/Info.plist
+++ b/Learn by Doing/Info.plist
@@ -32,6 +32,8 @@
 		<key>UIImageName</key>
 		<string>LaunchScreen</string>
 	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
